# Portfolio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
env/production/: django.env.example  nginx-certbot.env.example
nginx/: Dockerfile  local.conf
server/: asgi.py  urls.py  wsgi.py
server/apps/portfolio/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/portfolio/migrations/: 0001_initial.py  0002_project_skill_delete_projects_delete_skills.py
server/settings/: base.py  production.py
server/templates/: base.html  footer.html  index.html  launch_page.html  navbar.html  projects.html  skills.html
