[tool.poetry]
name = "website-portfolio"
version = "0.1.0"
description = "My portfolio website"
authors = ["Olena Gut <lena.gut1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pillow = "^10.2.0"
pillow-pil = "^0.1.dev0"
fontawesomefree = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
